# goldfish

./: .dockerignore  .gitignore  README.md  docker-compose.yml
client/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx-nonroot.conf  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  vite-env.d.ts
client/src/assets/: README.md
client/src/components/: NoteForm.tsx  NoteList.tsx  NoteView.tsx  RichTextEditor.css  RichTextEditor.tsx
client/src/components/ui/: alert-dialog.tsx  collapsible.tsx  sonner.tsx
client/src/services/: api.ts
database/: .env.example  Dockerfile  docker-compose.yml  init.sql
documentation/: devbook.md  requirements.md  user_story_1_-_prise_de_notes.md
server/: .env.example  Dockerfile  __init__.py  database.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt  utils.py
server/models/: __init__.py  note.py
server/routers/: __init__.py  notes.py
server/schemas/: __init__.py  note.py
