[project]
name = "goldfish-server"
version = "0.1.0"
description = "Backend API for Goldfish note-taking application"
requires-python = "==3.11.9"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

